src/type_atoms/snapshots/syn_state_machine__type_atoms__proc_macro_items__tests_groups__it_matches_contentful_grouped_brace.snap
---
source: src/type_atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse Brace<Ident> : { hello }),\n    insta_match_test!(* peek Brace<Ident> : { hello }))"
---
(
    Ok(
        Brace(
            Ident(
                hello,
            ),
            Span,
        ),
    ),
    Some(
        3,
    ),
)
